<resources>
    <string name="app_name">ECHO</string>

    <!-- Texts -->
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="system_language">Primary voice recognition Language (System Language)</string>
    <string name="extra_language">Secondary voice recognition Language <font color='#FF0000'>*</font></string>
    <string name="edit_commands">Edit Commands</string>
    <string name="default_command">Default Command</string>
    <string name="add_command">New Command</string>
    <string name="update_command">Update Command</string>
    <string name="edit_default_command">Edit Default Command</string>
    <string name="keywords">Keyword(s)</string>
    <string name="command_input">Add Keyword <font color='#FF0000'>*</font></string>
    <string name="action">Select Action <font color='#FF0000'>*</font></string>
    <string name="save">Save</string>
    <string name="back">Back</string>

    <string name="info_default_command">The Default Command is launched when the voice recognized text matches no specified commands</string>
    <string name="action_google_maps">Google Maps</string>
    <string name="action_waze">Waze</string>
    <string name="action_phone_call">Make a Phone Call</string>
    <string name="action_telegram">Telegram</string>
    <string name="action_whatsapp">WhatsApp</string>
    <string name="action_spotify">Spotify</string>
    <string name="action_youtube">YouTube</string>
    <string name="action_netflix">Netflix</string>
    <string name="action_open_app">Open Application</string>
    <string name="action_none">No Action</string>
    <string name="unrecognized">Unrecognized</string>

    <string name="desc_destination">- \'%1$s\'</string>
    <string name="desc_package">\'%1$s\'</string>
    <string name="desc_to">to \'%1$s\'</string>
    <string name="desc_search">- Search for \'%1$s\'</string>

    <string name="rtc_type_message">Send Message</string>
    <string name="rtc_type_audio">Audio Call</string>
    <string name="rtc_type_video">Video Call</string>

    <string name="hint_rtc_type">Communication Form <font color='#FF0000'>*</font></string>
    <string name="hint_contact">Recipient (by default voice controlled)</string>
    <string name="hint_app">Select Application to Open <font color='#FF0000'>*</font></string>
    <string name="hint_destination">Specific Destination (by default voice controlled)</string>
    <string name="hint_media_search">Specific title/artist (by default voice controlled)</string>
    <string name="hint_rms_db">Microphone max sensitivity (max received was %1$s) <font color='#FF0000'>*</font></string>

    <string name="error_empty_keyword">Empty keyword!</string>
    <string name="error_no_keywords">You have specified no voice keyword(s)!</string>
    <string name="error_keyword_exists">Keyword already exists!</string>
    <string name="error_package_name_empty">Package Name cannot be empty!</string>
    <string name="error_rms_db">Microphone max sensitivity must be between 1 and 100</string>
    <string name="error_rtc_message_recipient_empty">For sending a Message you must select a Recipient!</string>

    <string name="confirm_saved">Command saved</string>
    <string name="confirm_deleted">Command deleted</string>

    <string name="delete_command_title">Delete Command</string>
    <string name="delete_command_question">Are you sure you want to delete this Command?</string>

</resources>