<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="fi.leif.android.voicecommands.viewmodel.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top bar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toTopOf="@id/content"
            app:title="@string/settings" />

        <!-- Content -->
        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- System Language -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/system_language_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/system_language">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/system_language_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.systemLanguage}"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Extra Languages -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/extra_language"
                    android:labelFor="@+id/extra_language">

                    <AutoCompleteTextView
                        android:id="@+id/extra_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Max rmsDb value -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rms_db_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_rms_db">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="number"
                        android:text="@={viewModel.maxRmsDb}"
                        android:id="@+id/rms_db_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- List/default command buttons -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_commands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/edit_commands"
                    android:width="300dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="10dp"
                    app:icon="@android:drawable/ic_menu_edit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_default_command"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/default_command"
                    android:width="300dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:icon="@android:drawable/ic_menu_edit" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>