<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top bar -->
        <com.google.android.material.appbar.MaterialToolbar
            app:layout_constraintBottom_toTopOf="@id/commands"
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/edit_commands" />

        <!-- Content -->
        <ListView
            app:layout_constraintTop_toBottomOf="@id/bottom_bar"
            android:id="@+id/commands"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="?attr/actionBarSize"/>

        <!-- bottom bar -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/commands">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/back"
                    app:icon="@android:drawable/ic_menu_revert" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_command"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:text="@string/add_command"
                    app:icon="@android:drawable/ic_menu_add" />
            </com.google.android.material.bottomappbar.BottomAppBar>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>