<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="fi.leif.android.voicecommands.viewmodel.EditCommandViewModel" />
        <variable
            name="lifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top bar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toTopOf="@id/content"/>

        <!-- Content -->
        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <LinearLayout
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Existing commands -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/keywords_title"
                        android:layout_width="wrap_content"
                        android:text="@string/keywords"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingEnd="15dp"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_height="match_parent"/>
                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/command_words"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true" />
                </LinearLayout>

                <!-- Command input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/command_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/command_input"
                    app:endIconDrawable="@android:drawable/ic_input_add"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/command_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Info text -->
                <TextView
                    android:id="@+id/info"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_default_command"
                    app:drawableStartCompat="@android:drawable/ic_dialog_info"
                    android:drawablePadding="10dp"/>

                <!-- Choose Action -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action"
                    android:labelFor="@+id/action">

                    <AutoCompleteTextView
                        android:id="@+id/action"
                        app:lifecycle="@{lifecycleOwner}"
                        app:items="@{viewModel.actions}"
                        android:onItemClick="@{(p,v,pos,i) -> viewModel.setSelectedActionByPosition(pos)}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:paddingTop="10dp"
                    android:id="@+id/action_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </FrameLayout>

            </LinearLayout>
        </ScrollView>

        <!-- bottom bar -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/content">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:text="@string/save"
                    app:icon="@android:drawable/ic_menu_save" />
            </com.google.android.material.bottomappbar.BottomAppBar>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>